--- a/meta/main.yml
+++ b/meta/main.yml
@@ -106,7 +106,8 @@ galaxy_info:
   #- packaging
   - system
   #- web
-dependencies: []
+dependencies:
+  - aspects_common_packages
   # List your role dependencies here, one per line. Only
   # dependencies available via galaxy should be listed here.
   # Be sure to remove the '[]' above if you add dependencies
