--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,8 @@
 ---
 # file: roles/ntp_client/tasks/main.yml
-
+- include: installPackages.yml
+  tags:
+  - aspects_ntp_client
 - name: include correct vars file
   include_vars: "roles/aspects_ntp_client/defaults/{{ ansible_os_family }}.yml"
   tags:
