Updates that bring it in line with Ansible 2.x. Other syntax updates.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,7 +10,9 @@
     - aspects_ntp_client
 
 - name: Set ntp.conf template
-  template: src=ntp.conf.j2 dest=/etc/ntp.conf
+  template:
+    src: "templates/ntp.conf.j2"
+    dest: "/etc/ntp.conf"
   notify: restart ntp
   tags:
     - aspects_ntp_client
