--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,6 +3,7 @@ galaxy_info:
   author: David Reagan
   description: Set up the ntp service as client.
   company: Lane Community College
+  min_ansible_version: 1.9
   license: MIT
   platforms:
   #- name: EL
@@ -54,19 +55,12 @@ galaxy_info:
   #  - 9.2
   - name: CentOS
     versions:
-    - 6.5
+    - 7
   - name: Ubuntu
     versions:
-  #  - all
-  #  - lucid
-  #  - maverick
-  #  - natty
-  #  - oneiric
     - precise
-  #  - quantal
-  #  - raring
-  #  - saucy
-  #  - trusty
+    - trusty
+    - xenial
   #- name: SLES
   #  versions:
   #  - all
@@ -111,4 +105,4 @@ dependencies: []
   # dependencies available via galaxy should be listed here.
   # Be sure to remove the '[]' above if you add dependencies
   # to this list.
-  
+
