--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,18 +1,6 @@
 ---
-# file: roles/ntp_client/tasks/main.yml
-- include: installPackages.yml
+- name: "Include tasks when enabled."
+  when: aspects_ntp_client_enabled
+  include: init.yml
   tags:
   - aspects_ntp_client
-
-- name: include correct vars file
-  include_vars: "{{ ansible_os_family }}.yml"
-  tags:
-    - aspects_ntp_client
-
-- name: Set ntp.conf template
-  template:
-    src: "ntp.conf.j2"
-    dest: "/etc/ntp.conf"
-  notify: restart ntp
-  tags:
-    - aspects_ntp_client
