--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -2,10 +2,19 @@
 # file: roles/ntp_client/hanlders/main.yml
 
 - name: start ntp
-  service: name={{ aspects_ntp_client_service_name }} state=started enabled=yes
+  service:
+    name: "{{ aspects_ntp_client_service_name }}"
+    state: "started"
+    enabled: "yes"
 
 - name: stop ntp
-  service: name={{ aspects_ntp_client_service_name }} state=stopped enabled=no
+  service:
+    name: "{{ aspects_ntp_client_service_name }}"
+    state: "stopped"
+    enabled: "no"
 
 - name: restart ntp
-  service: name={{ aspects_ntp_client_service_name }} state=restarted enabled=yes
+  service:
+    name: "{{ aspects_ntp_client_service_name }}"
+    state: "restarted"
+    enabled: "yes"
