--- a/tasks/init.yml
+++ b/tasks/init.yml
@@ -3,6 +3,7 @@
 - include: installPackages.yml
   tags:
   - aspects_ntp_client
+  - aspects_ntp_client_package_install
 
 - name: include correct vars file
   include_vars: "{{ ansible_os_family }}.yml"
