aspects_ntp_client - Removed Ubuntu 14.04 and Oracle Linux 6 support. Set min ansible version 2.8. Changed include to include_tasks. Removed gitlab-ci config. Updated license copyright date.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: "Include tasks when enabled."
   when: aspects_ntp_client_enabled
-  include: init.yml
+  include_tasks: init.yml
   tags:
   - aspects_ntp_client
