aspects_ntp_client - Ubuntu 20.04 and Debian 10 package names to aspects_packages_packages.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,8 +6,10 @@ aspects_packages_packages:
     Ubuntu:
       1604: "ntp"
       1804: "ntp"
+      2004: "ntp"
     Debian:
       9: "ntp"
+      10: "ntp"
     CentOS:
       7: "ntp"
     OracleLinux:
