--- a/meta/main.yml
+++ b/meta/main.yml
@@ -12,9 +12,11 @@ galaxy_info:
     versions:
     - xenial
     - bionic
+    - focal
   - name: Debian
     versions:
     - stretch
+    - buster
   - name: OracleLinux
     versions:
     - 7
